# dumbctl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: database.rs  main.rs  settings.rs
src/disk/: benchmark.rs  mod.rs  smart.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/tabs/: benchmark.rs  disks.rs  export.rs  mod.rs  sectors.rs  settings.rs  smart.rs
src/utils/: mod.rs
