[package]
name = "dumbctl"
version = "0.1.102"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = "0.4"
dirs = "5.0"
thiserror = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
